# openmp-praktikum

./: README.md
code_task/: CMakeLists.txt
code_task/ParallelDaxpy/: Makefile  daxpy.cpp  daxpy.err  daxpy.out  daxpy_job_script_reg.sh
code_task/ParallelDaxpy/Files with Schedule/: daxpy  daxpy.out.1  daxpy.out.16  daxpy.out.2  daxpy.out.4  daxpy.out.8  job_script_schedule.sh
code_task/ParallelDaxpy/Files without schedule/: daxpy  daxpy.out.1  daxpy.out.16  daxpy.out.2  daxpy.out.4  daxpy.out.8  daxpy_job_script_array.sh
code_task/ParallelNbody/: CMakeLists.txt
code_task/ParallelNbody/Files nbody parallel/: spp-nbody-omp
code_task/ParallelNbody/Files nbody parallel/z/: nbody_case_z_par.err.4  nbody_case_z_par.out.16  nbody_case_z_par.out.2  nbody_case_z_par.out.4  nbody_case_z_par.out.8  nbody_par_case_z.sh  z.txt
code_task/ParallelNbody/include/: Body.h  Config.h  Logger.h  PTime.h  SimGUIAdapter.h  Simulation.h  SimulationData.h  Vec2.h
code_task/ParallelNbody/include/gui/: SimulationGUI.h  nbody.ui
code_task/ParallelNbody/scenarios/: nbody.txt  random.txt
code_task/ParallelNbody/src/: Body.cpp  CMakeLists.txt  Config.cpp  OmpPractical.cpp  Simulation.cpp
code_task/ParallelNbody/src/gui/: SimulationGUI.cpp
code_task/ParallelQuickSort/: Makefile  quicksort.cpp
code_task/ParallelQuickSort/Files for a/: job_script.sh  qsort  quicksort.err  quicksort.out
code_task/ParallelQuickSort/Files for b/: job_script.sh  qsort  quicksort.out
